# Simontacchi

./: .gitignore  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  README.md  globals.cpp  globals.h  main.cpp  simon.cfg
src/book/: book.cpp  book.h  bookgen.cpp  bookgen.h  game.cpp  game.h
src/control/: configfile.cpp  configfile.h  controller.cpp  controller.h  craftydisplayman.cpp  craftydisplayman.h  diag.cpp  diag.h  displayman.cpp  displayman.h  engine.cpp  engine.h  exception.cpp  exception.h  origdisplayman.cpp  origdisplayman.h  pththreadsvc.cpp  pththreadsvc.h  threadsvc.cpp  threadsvc.h  ucicontroller.cpp  ucicontroller.h  ucidisplayman.cpp  ucidisplayman.h  w32threadsvc.cpp  w32threadsvc.h  winboardcontroller.cpp  winboardcontroller.h
src/engine/: board.cpp  board.h  clock.cpp  clock.h  data.cpp  evaluator.cpp  evaluator.h  fen.cpp  intrecognizer.cpp  intrecognizer.h  move.cpp  move.h  movegen.cpp  movelist.cpp  movelist.h  notation.cpp  notation.h  ordering.cpp  pgnloader.cpp  pgnloader.h  player.cpp  player.h  pvs.cpp  quies.cpp  see.cpp  ttables.cpp  variation.cpp  variation.h  x86.cpp  zobrist.cpp
src/utility/: bufferedreader.cpp  bufferedreader.h  strtoken.cpp  strtoken.h
