AUTOMAKE_OPTIONS = subdir-objects

AM_CPPFLAGS = -I$(srcdir)/engine -I$(srcdir)/control -I$(srcdir)/book -I$(srcdir)/utility 

bin_PROGRAMS = simontacchi
simontacchi_SOURCES = globals.cpp \
					  main.cpp \
					  book/book.cpp\
					  book/bookgen.cpp \
					  book/game.cpp \
					  control/configfile.cpp \
					  control/controller.cpp \
					  control/craftydisplayman.cpp \
					  control/diag.cpp \
					  control/displayman.cpp \
					  control/engine.cpp \
					  control/exception.cpp \
					  control/origdisplayman.cpp \
					  control/threadsvc.cpp \
					  control/ucicontroller.cpp \
					  control/ucidisplayman.cpp \
					  control/w32threadsvc.cpp \
					  control/winboardcontroller.cpp \
					  control/pththreadsvc.cpp \
					  engine/board.cpp \
					  engine/clock.cpp \
					  engine/data.cpp \
					  engine/evaluator.cpp \
					  engine/fen.cpp \
					  engine/intrecognizer.cpp \
					  engine/move.cpp \
					  engine/movegen.cpp \
					  engine/movelist.cpp \
					  engine/notation.cpp \
					  engine/ordering.cpp \
					  engine/pgnloader.cpp \
					  engine/player.cpp \
					  engine/pvs.cpp \
					  engine/quies.cpp \
					  engine/see.cpp \
					  engine/ttables.cpp \
					  engine/variation.cpp \
					  engine/x86.cpp \
					  engine/zobrist.cpp \
					  utility/bufferedreader.cpp \
					  utility/strtoken.cpp
